--- a/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron_anhang.tex
+++ b/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron_anhang.tex
@@ -1,4 +1,4 @@
-\section{McCulloch-Pitts-Zelle} \label{ap:sc:mpz} % appendix - section - McCulloch ...
+\subsection{McCulloch-Pitts-Zelle} \label{ap:sc:mpz} % appendix - section - McCulloch ...
 
 \begin{figure}[!htb]
 	\centering
