--- a/paper/tex/geschichtliches/perceptor/perceptor.tex
+++ b/paper/tex/geschichtliches/perceptor/perceptor.tex
@@ -1,3 +1,7 @@
 \section{Perceptron}
 
-Im Jahre 1958 
+Im Jahr 1958 entwickelte der US-amerikanischer Psychologe und Informatiker Frank Rosenblatt das sogenannte \emph{Perceptron}. Dieses stellt das älteste neurale Netz dar welches teilweise auch heutzutage noch genutzt wird. Inspiriert wurde Rosenblatt vom Auge einer Fliege wobei die Entscheidung der nächsten Flugrichtung in Teilen bereits im Auge stattfindet. Das Perceptron stellt in diesem Zusammenhang eine direkte Abbildung dieser Beobachtung dar. 
+
+Das Modell ist eine Weiterentwicklung von der McCulloch-Pitts-Zelle (siehe \autoref{sc:mpn}). Allerdings ist das Perceptron in der Lage die unterschiedlichen Eingabewerte zu priorisieren. Dies geschieht mittels reeller Gewichte. Die jeweiligen Inputwerte werden mit den Gewichten verechnet und das 
+
+$ \sum_j w_j x_j $ 
