--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -21,6 +21,9 @@
 % Listen mit mehreren Spalten
 \usepackage{multicol}
 
+% Math
+\usepackage{amsmath}
+
 % Schoene Tabellen 
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -34,7 +37,7 @@
 
 % Noetig fuer verschachtelte Imports 
 \usepackage{import}
-\usepackage{subcaption}
+% \usepackage{subcaption} % Fehler in Kombi mit Subfig 
 % Noetig fuer 2 x 2 Bilder in einer Figureumgebung
 \usepackage{mwe}
 
@@ -44,6 +47,7 @@
 \setkeys{Gin}{width=0.8\linewidth}
 % mehrere Bilder nebeneinander
 % \usepackage{minipage}
+\usepackage{subfig}
 
 % Floatbarrier
 \usepackage{placeins}
