--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -10,6 +10,12 @@
   note = {Aufgerufen am: 14-03-2020}
 }
 
+@misc{klproblem,
+  title = {{Definition Klassifizierungssproblem}},
+  howpublished = {\url{http://ekpwww.physik.uni-karlsruhe.de/~tkuhr/HauptseminarWS1112/Keck_handout.pdf}},
+  note = {Aufgerufen am: 15-03-2020}
+}
+
 @book{nielsen2015neural,
   title={Neural Networks and Deep Learning},
   author={Nielsen, M.A.},
