--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -23,6 +23,7 @@
 
 % Math
 \usepackage{amsmath}
+\usepackage{eqnarray}
 
 % Schoene Tabellen 
 \usepackage{booktabs}
@@ -66,15 +67,9 @@ pdfauthor={Silas Hoffmann, inf103088}
 
 % ---------- Macros -----------
 
-
-
-
-
 \newcommand{\mycaption}[2] {
 	\caption[#1]{#1 \cite{#2}}
 }
-
-
 
 % -----------------------------
 
