--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -16,7 +16,7 @@
   note = {Aufgerufen am: 15-03-2020}
 }
 
-@book{nielsen2015neural,
+@book{dlnielsen,
   title={Neural Networks and Deep Learning},
   author={Nielsen, M.A.},
   url={https://books.google.de/books?id=STDBswEACAAJ},
