--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -35,6 +35,9 @@
 % Um Dateien einzubinden
 \usepackage{embedfile}
 
+% Extra Platz nach eigenem Ermessen via \xspace
+% \usepackage{xspace}
+
 
 % Noetig fuer verschachtelte Imports 
 \usepackage{import}
@@ -65,14 +68,6 @@ pdfauthor={Silas Hoffmann, inf103088}
 }
 
 
-% ---------- Macros -----------
-
-\newcommand{\mycaption}[2] {
-	\caption[#1]{#1 \cite{#2}}
-}
-
-% -----------------------------
-
 
 % Header Informationen festgelegt
 \usepackage{fancyhdr}
@@ -90,9 +85,19 @@ pdfauthor={Silas Hoffmann, inf103088}
 \definecolor{LightLime}{rgb}{0.3,0.5,0.4}
 \definecolor{Blue}{rgb}{0.0,0.0,1.0}
 
+
+
+
+% ---------- Macros -----------
+
+\newcommand{\mycaption}[2] {
+	\caption[#1]{#1 \cite{#2}}
+}
+
 % Macro um nicht jedes Mal die listing und namen-Referenz angeben zu muessen
 \newcommand{\lstref}[1]{(siehe Listing \ref{#1}, S. \pageref{#1}, \nameref{#1})}
 
+% -----------------------------
 
 % Syntaxhighlighting festgelegt
 \lstdefinestyle{CodeHighlighting} 
