finished first draft - Perceptron

--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -13,8 +13,10 @@ todo Inhaltsverzeichnis (Sections)
 
 \import{geschichtliches/mcCullochPittsNeuron/}{mpNeuron.tex}
 \FloatBarrier
+\pagebreak
 
 \import{geschichtliches/perceptor/}{perceptor.tex}
 \FloatBarrier
+\pagebreak
 
 \import{geschichtliches/adeline/}{adeline.tex}
