--- a/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron_anhang.tex
+++ b/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron_anhang.tex
@@ -3,21 +3,21 @@
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.5\linewidth]{img/mpn_or2}
-	\mycaption{McCulloch-Pitts-Zelle - OR Gatter}{mpNeuron}
+	\mycaption{McCulloch-Pitts-Zelle - OR Gatter 2}{mpNeuron}
 	\label{fig:mpn_or2}
 \end{figure}
 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{img/mpn_or3}
-	\mycaption{McCulloch-Pitts-Zelle - OR Gatter}{mpNeuron}
+	\mycaption{McCulloch-Pitts-Zelle - OR Gatter 3}{mpNeuron}
 	\label{fig:mpn_or3}
 \end{figure}
 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{img/mpn_tautology}
-	\mycaption{McCulloch-Pitts-Zelle - OR Gatter}{mpNeuron}
+	\mycaption{McCulloch-Pitts-Zelle - Tautologie}{mpNeuron}
 	\label{fig:mpn_tautology}
 \end{figure}
 
