--- a/paper/tex/geschichtliches/perceptor/perceptor.tex
+++ b/paper/tex/geschichtliches/perceptor/perceptor.tex
@@ -49,7 +49,7 @@ Geplottet sieht die Aktivierungsfunktion \emph{g} übrigens folgendermaßen aus 
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=.5\linewidth]{./img/perceptron_einheitsSprungfunktion}
+	\includegraphics[width=.3\linewidth]{./img/perceptron_einheitsSprungfunktion}
 	\mycaption{Perceptron - Einheits-Sprungfunktion}{mpNeuron}
 	\label{fig:perceptron_einhSprFkt}
 \end{figure}
@@ -74,7 +74,7 @@ Wichtig hierbei, es wird ein zusätzliches Gewicht welches den negativen Schwell
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=\linewidth]{img/perceptron_schematisch}
+	\includegraphics[width=.6\linewidth]{img/perceptron_schematisch}
 	\mycaption{Perceptron - Modelansicht}{mpNeuron}
 	\label{fig:perc_modelansicht}
 \end{figure}
