--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -22,6 +22,18 @@
   note = {Aufgerufen am: 16-03-2020}
 }
 
+@misc{3b1b,
+  title = {{3Blue1Brown - Videokurs zur Einführung in die Neuralen Netze}},
+  howpublished = {\url{https://www.youtube.com/watch?v=aircAruvnKk&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi}},
+  note = {Aufgerufen am: 16-03-2020}
+}
+
+@misc{partAbl,
+  title = {{Khan Academy - Partielle Ableitungen (Funktion mit zwei Eingabewerten)}},
+  howpublished = {\url{https://www.youtube.com/watch?v=1CMDS4-PKKQ&t=542s}},
+  note = {Aufgerufen am: 16-03-2020}
+}
+
 @book{dlnielsen,
   title={Neural Networks and Deep Learning},
   author={Nielsen, M.A.},
