added geogebra source to screenshot

--- a/paper/tex/geschichtliches/adeline/adeline.tex
+++ b/paper/tex/geschichtliches/adeline/adeline.tex
@@ -67,15 +67,19 @@ Da es sich im Beispiel um einen mehrdimensionalen Eingabevektor handelt muss man
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.6\linewidth]{img/partAbl_1}
-	\mycaption{Partielle Ableitung 1}{mpNeuron}
+	\caption[Partielle Ableitung 1]{Partielle Ableitung 1 \protect\footnotemark}
 	\label{fig:partAbl1}
 \end{figure}
+
+\FloatBarrier
+\footnotetext{Mit Geogebra 3d erstellt: \url{https://www.geogebra.org/3d?lang=de}}
+
 
 todo
 
 
 
-\FloatBarrier
+
 Gegeben sei folgende Funktion \emph{f}: 
 
 
