--- a/paper/tex/geschichtliches/perceptor/perceptor.tex
+++ b/paper/tex/geschichtliches/perceptor/perceptor.tex
@@ -65,7 +65,7 @@ g(\mathbf{z}) =\begin{cases}
 
 wobei gilt
 
-\begin{equation}
+\begin{equation} \label{eq:vektorprod}
 \mathbf{z} =  \mathbf{w_0x_{0}} + w_1x_{1} + \dots + w_mx_{m} = \sum_{j=1}^{m} x_{j}w_{j} \\ = \mathbf{w}^T\mathbf{x}
 \end{equation}
 
