--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -20,3 +20,7 @@ todo Inhaltsverzeichnis (Sections)
 \pagebreak
 
 \import{geschichtliches/adeline/}{adeline.tex}
+\FloatBarrier
+\pagebreak
+
+\import{geschichtliches/convolutionalNN/}{convolutionalnn.tex}
