--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -34,6 +34,18 @@
   note = {Aufgerufen am: 16-03-2020}
 }
 
+@misc{cnnHistory,
+  title = {{Convolutional NN)}},
+  howpublished = {\url{https://glassboxmedicine.com/2019/04/13/a-short-history-of-convolutional-neural-networks/}},
+  note = {Aufgerufen am: 18-03-2020}
+}
+
+@misc{simpleComplexCell,
+  title = {{Convolutional NN)}},
+  howpublished = {\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1890437/}},
+  note = {Aufgerufen am: 18-03-2020}
+}
+
 @book{dlnielsen,
   title={Neural Networks and Deep Learning},
   author={Nielsen, M.A.},
